-----------------
- Small fix in the GUI
- Fixed hopefully most of the focus problems now

Reggie, 10.3.1999:
------------------
- Fixes

Reggie, 11.3.1999:
------------------
- Implemented KWordDrag which will be used for storing data on the clipboard and for DnD
- Using new features (QMimeSource stuff) of the QClipboard
- Text is copied as text/plain and in native KWord format (application/x-kword) to the clipboard (using KWordDrag as QMimeSource)
  (only partly implemented)
- When pasting text: If native KWord format (application/x-kword) is provided, this is used, else text/plain is used
  (only partly implemented)
=> when cut/copy/pasting between or in KWord documents, formatting is copied/pasted too now

Reggie, 12.3.1999:
------------------
- Some fixes
- Some more work on pasting text
- Some more fixes

Reggie, 16.3.1999:
------------------
- Some fixes
- More work on cut/copy/paste

Reggie, 17.3.1999:
------------------
- Fixes in tables
- Improved variables

Reggie, 18.3.1999:
------------------
- Implemented saving of different types of variables
- Some fixes in variables

Reggie, 19.3.1999:
------------------
- Fixed saving variables
- Some fixes and improvements in variables
- Using QChar instead of char in the KWString class now => KWord supports Unicode (at least I hope so :-)
- edit->paste gets enabled/disabled according to the clipboard data
- edit->copy/cut gets enabled/disbaled according to the text selection

Reggie, 20.3.1999:
------------------
- Fixes
- Fixed saving variables
- Implemented loading variables

Reggie, 21.3.1999:
------------------
- Copying multiple paragraphs with formats to clipboard works
- Some fixes and improvements in pasting formatted text

Reggie, 22.3.1999:
------------------
- Pasting multiple paragraphs with formats works

Reggie, 23.3.1999:
------------------
- Changed the toolbar pixmap which shows the text color - much nicer now
- Fixes in the GUI
- Started with internals for joining/splitting cells